# calculadora-python

./: .gitignore  CONTRIBUTING.md  README.md  calculadora.py  pyproject.toml  untitled4.py
.github/workflows/: ci.yml
src/calculadora/: __init__.py  __main__.py  cli.py  operacoes.py
tests/: test_operacoes.py
